[gd_scene load_steps=11 format=3 uid="uid://cv5sfua4e41yl"]

[ext_resource type="TileSet" uid="uid://b85edn0lxsvdt" path="res://resources/frames.tres" id="1_so7vb"]
[ext_resource type="Script" path="res://scenes/ui/select_level_cell.gd" id="1_w3utl"]
[ext_resource type="FontFile" uid="uid://ci0pbhtb65wdp" path="res://assets/CyberpunkCraftpixPixel.otf" id="2_nfkkr"]
[ext_resource type="Texture2D" uid="uid://xdjoheyr8wff" path="res://assets/empty_star.png" id="3_mawlr"]
[ext_resource type="Texture2D" uid="uid://jocn02fl6k6c" path="res://assets/full_star.png" id="4_nvgdg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdmlw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwn6w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig3qf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ocbb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2uct"]

[node name="SelectLevelCell" type="Control"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 3
anchors_preset = 0
offset_right = 96.0
offset_bottom = 96.0
script = ExtResource("1_w3utl")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_so7vb")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 5, 65536, 1, 6, 131072, 1, 7, 1, 65537, 5, 65537, 65537, 6, 131073, 65537, 7, 2, 131073, 5, 65538, 131073, 6, 131074, 131073, 7)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_top = 24.0
offset_right = 96.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_nfkkr")
theme_override_font_sizes/font_size = 12
text = "LEVEL 0"
horizontal_alignment = 1

[node name="EmptyStar" type="Sprite2D" parent="."]
position = Vector2(48, 64)
scale = Vector2(0.026, 0.026)
texture = ExtResource("3_mawlr")

[node name="EmptyStar3" type="Sprite2D" parent="."]
position = Vector2(24, 64)
scale = Vector2(0.026, 0.026)
texture = ExtResource("4_nvgdg")

[node name="EmptyStar2" type="Sprite2D" parent="."]
position = Vector2(72, 64)
scale = Vector2(0.026, 0.026)
texture = ExtResource("3_mawlr")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 96.0
offset_bottom = 96.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_mdmlw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qwn6w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ig3qf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8ocbb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h2uct")

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
